<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_eeeeee"
    tools:context="com.zmt.boxin.Activity.BoxinActivity">

    <include layout="@layout/toolbar_layout"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:background="@drawable/circle">

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@mipmap/logo"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="20dp"
                android:id="@+id/update"
                android:background="@color/color_fafafa">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/color_dddddd"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:text="@string/common"
                        android:textSize="18sp"
                        android:textColor="@color/color_000000"/>

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="20dp"
                        android:background="@mipmap/right"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/color_dddddd"/>

                </RelativeLayout>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/joinUs"
                android:textSize="16sp"
                android:textColor="@color/color_000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/introduce"
                android:textSize="16sp"
                android:textColor="@color/color_000000"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/choose"
                android:background="@drawable/login"
                android:text="@string/text"
                android:textSize="16sp"
                android:textColor="@color/color_fafafa"
                android:padding="10dp"/>

            <com.zmt.boxin.View.ClearEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="@string/number"
                android:textSize="16sp"
                android:textColor="@color/color_757575"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:id="@+id/suggestRelative"
                android:background="@drawable/shape">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:id="@+id/suggest_content"
                    android:hint="自我介绍"
                    android:textColorHint="@color/color_757575"
                    android:textSize="16sp"
                    android:textStyle="italic"/>

            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="30dp"
                android:id="@+id/joinUs"
                android:background="@drawable/login"
                android:text="@string/send"
                android:textSize="16sp"
                android:textColor="@color/color_fafafa"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
