<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <com.zmt.boxin.Utils.CircleImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@mipmap/logo"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:padding="16dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.zmt.boxin.Utils.ClearEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/username"
                    android:hint="@string/username"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.zmt.boxin.Utils.PasswordEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password"
                    android:hint="@string/password"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="100dp"
                    android:id="@+id/TextLayout">

                    <com.zmt.boxin.Utils.ClearEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkCodeText"
                        android:hint="@string/checkCode"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:id="@+id/checkCode" />

            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/login"
                android:textSize="16sp"
                android:textColor="@color/color_fafafa"
                android:id="@+id/login"
                android:background="@drawable/login"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:id="@+id/remember"
                android:text="记住密码"
                android:textSize="16sp"
                android:textColor="@color/color_212121"/>

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/coordinatorLayout">

    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>