<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_eeeeee"
    tools:context=".MainActivity">

    <include layout="@layout/toolbar_layout"/>

    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolBar_layout"
        android:layout_marginBottom="57dp"
        android:id="@+id/viewPager"
        android:background="@color/color_fafafa">

    </android.support.v4.view.ViewPager>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/color_999999"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/MainMenu"
        android:background="@color/color_fafafa">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:id="@+id/courses"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/image_courses"
                android:background="@mipmap/courses_pressed"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_courses"
                android:text="@string/courses"
                android:textSize="12sp"
                android:textColor="@color/color_03a9f4"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:id="@+id/run"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/image_run"
                android:background="@mipmap/run"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_run"
                android:text="@string/run"
                android:textSize="12sp"
                android:textColor="@color/color_757575"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:id="@+id/make_run"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/image_make_run"
                android:background="@mipmap/make_run"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_make_run"
                android:text="@string/make_run"
                android:textSize="12sp"
                android:textColor="@color/color_757575"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:id="@+id/choose"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/image_choose"
                android:background="@mipmap/choose"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_choose"
                android:text="@string/choose"
                android:textSize="12sp"
                android:textColor="@color/color_757575"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:id="@+id/mine"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/image_mine"
                android:background="@mipmap/mine"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_mine"
                android:text="@string/mine"
                android:textSize="12sp"
                android:textColor="@color/color_757575"/>

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
